partiql-ast/tests/snapshots/pretty__pretty_expr_in.snap
---
source: partiql-ast/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
(a, b) IN ((1, 2), (3, 4))
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
[ a, b ] IN [ [ 1, 2 ], [ 3, 4 ] ]

------------------------------------------------------------------------------------------------------------------------
[ a, b ] IN [ [ 1, 2 ], [ 3, 4 ] ]

--------------------------------------------------------------------------------
[ a, b ] IN [ [ 1, 2 ], [ 3, 4 ] ]

----------------------------------------
[ a, b ] IN [ [ 1, 2 ], [ 3, 4 ] ]

------------------------------
[ a, b ] IN [
  [ 1, 2 ],
  [ 3, 4 ]
]

--------------------
[ a, b ] IN [
  [ 1, 2 ],
  [ 3, 4 ]
]

----------
[ a, b
] IN [
  [ 1, 2
  ],
  [ 3, 4 ]
]
