partiql-ast/tests/snapshots/pretty__pretty_from_comma.snap
---
source: partiql-ast/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
SELECT a, b FROM T1, T2
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
SELECT a, b FROM T1, T2

------------------------------------------------------------------------------------------------------------------------
SELECT a, b FROM T1, T2

--------------------------------------------------------------------------------
SELECT a, b FROM T1, T2

----------------------------------------
SELECT a, b FROM T1, T2

------------------------------
SELECT a, b FROM T1, T2

--------------------
SELECT a, b FROM T1,
  T2

----------
SELECT a,
  b
FROM T1,
  T2
