partiql-ast/tests/snapshots/pretty__pretty_kw_fn1.snap
---
source: partiql-ast/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
trim(trailing from 'test')
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
trim(trailing:' ', "from":'test')

------------------------------------------------------------------------------------------------------------------------
trim(trailing:' ', "from":'test')

--------------------------------------------------------------------------------
trim(trailing:' ', "from":'test')

----------------------------------------
trim(trailing:' ', "from":'test')

------------------------------
trim(trailing:' ',
  "from":'test')

--------------------
trim(trailing:' ',
  "from":'test')

----------
trim(trailing:' ',
  "from":'test')
