partiql-ast/tests/snapshots/pretty__pretty_kw_fn2.snap
---
source: partiql-ast/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
POSITION('abc' IN 'abcdefg')
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
POSITION('abc', "IN":'abcdefg')

------------------------------------------------------------------------------------------------------------------------
POSITION('abc', "IN":'abcdefg')

--------------------------------------------------------------------------------
POSITION('abc', "IN":'abcdefg')

----------------------------------------
POSITION('abc', "IN":'abcdefg')

------------------------------
POSITION('abc',
  "IN":'abcdefg')

--------------------
POSITION('abc',
  "IN":'abcdefg')

----------
POSITION('abc',
  "IN":'abcdefg')
