partiql-ast/tests/snapshots/pretty__pretty_kw_fn3.snap
---
source: partiql-ast/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
substring('test', 100, 50)
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
substring('test', 100, 50)

------------------------------------------------------------------------------------------------------------------------
substring('test', 100, 50)

--------------------------------------------------------------------------------
substring('test', 100, 50)

----------------------------------------
substring('test', 100, 50)

------------------------------
substring('test', 100, 50)

--------------------
substring('test',
  100, 50)

----------
substring('test',
  100, 50)
