partiql-ast/tests/snapshots/pretty__pretty_pivot.snap
---
source: partiql-ast/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================

                  PIVOT foo.a AT foo.b
                  FROM <<{'a': 1, 'b':'I'}, {'a': 2, 'b':'II'}, {'a': 3, 'b':'III'}>> AS foo
                  ORDER BY a
                  LIMIT 1 OFFSET 1
                
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
PIVOT foo.b AT foo.a FROM << { 'a': 1, 'b': 'I' }, { 'a': 2, 'b': 'II' }, { 'a': 3, 'b': 'III' } >> AS foo ORDER BY a LIMIT 1 OFFSET 1

------------------------------------------------------------------------------------------------------------------------
PIVOT foo.b AT foo.a FROM << { 'a': 1, 'b': 'I' }, { 'a': 2, 'b': 'II' }, { 'a': 3, 'b': 'III' } >> AS foo ORDER BY a
LIMIT 1 OFFSET 1

--------------------------------------------------------------------------------
PIVOT foo.b AT foo.a FROM <<
    { 'a': 1, 'b': 'I' },
    { 'a': 2, 'b': 'II' },
    { 'a': 3, 'b': 'III' }
  >> AS foo ORDER BY a LIMIT 1 OFFSET 1

----------------------------------------
PIVOT foo.b AT foo.a FROM <<
    { 'a': 1, 'b': 'I' },
    { 'a': 2, 'b': 'II' },
    { 'a': 3, 'b': 'III' }
  >> AS foo ORDER BY a LIMIT 1 OFFSET 1

------------------------------
PIVOT foo.b AT foo.a FROM <<
    { 'a': 1, 'b': 'I' },
    { 'a': 2, 'b': 'II' },
    { 'a': 3, 'b': 'III' }
  >> AS foo ORDER BY a LIMIT 1
OFFSET 1

--------------------
PIVOT foo.b AT foo.a
FROM <<
    {
      'a': 1,
      'b': 'I'
    },
    {
      'a': 2,
      'b': 'II'
    },
    {
      'a': 3,
      'b': 'III'
    }
  >> AS foo
ORDER BY a LIMIT 1
OFFSET 1

----------
PIVOT foo.b AT foo.a
FROM <<
    {
      'a': 1,
      'b': 'I'
    },
    {
      'a': 2,
      'b': 'II'
    },
    {
      'a': 3,
      'b': 'III'
    }
  >> AS foo
ORDER BY a
LIMIT 1
OFFSET 1
